@@ -1,3 +1,8 @@
+2002-12-20  Daniel Elstner  <daniel.elstner@gmx.net>
+
+	* configure.ac: Put -I flags into CPPFLAGS instead of CXXFLAGS.
+	* macros/pcre.m4 (PCRE_CHECK_UTF8): Likewise for CFLAGS.
+
 2002-12-16  Daniel Elstner  <daniel.elstner@gmx.net>
 
 	* macros/pcre.m4 (PCRE_CHECK_VERSION): Use the sed magic from
